// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render correctly 1`] = `
<span
  class="shoppingItemText"
>
  0
</span>
`;

exports[`GridInventoryItem component should render correctly 1`] = `
<div>
  <img
    class="inventoryImage"
  />
  <p
    class="inventoryText"
  />
  <p
    class="inventoryText"
  >
    Disponibilità: 
  </p>
</div>
`;

exports[`Modal component should render correctly 1`] = `
<div
  class="modal hide"
>
  <div
    class="modal-content"
  />
</div>
`;

exports[`NavBar component should render correctly 1`] = `
<div>
  <ul
    id="navBar"
  >
    <li>
      <a
        href="/"
      >
        <img
          id="logo-image"
          src="../icons/logo2.png"
        />
        <span
          id="logo-text"
        >
          Brew Day!
        </span>
      </a>
    </li>
    <li>
      <a
        href="/ricette"
      >
        Ricette
      </a>
    </li>
    <li>
      <a
        href="/birre"
      >
        Birre
      </a>
    </li>
    <li>
      <a
        href="/inventario"
      >
        Inventario
      </a>
    </li>
    <li>
      <a
        href="/spesa"
      >
        Spesa
      </a>
    </li>
  </ul>
</div>
`;

exports[`QuantityInput component should render correctly 1`] = `
<div>
  <input
    data-testid="quantity-input"
    id="shoppingItemId"
    name="shoppingItemId"
    value=""
  />
</div>
`;

exports[`RecipeDelete component should render correctly 1`] = `
<div>
  <div>
    <h1>
      name
    </h1>
    <p>
      description
    </p>
    <table
      id="recipeView"
    >
      <thead>
        <tr>
          <th>
            Nome
          </th>
          <th>
            Quantità
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            name
          </td>
          <td>
            0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="recipeButton"
  >
    Sei sicuro di voler rimuovere la ricetta?
  </button>
</div>
`;

exports[`RecipeEdit component should render correctly 1`] = `
<div>
  <p>
    Nome:
  </p>
  <textarea
    id="nameTextArea"
  >
    name
  </textarea>
  <p>
    Descrizione:
  </p>
  <textarea
    id="descriptionTextArea"
  >
    description
  </textarea>
</div>
`;

exports[`RecipeView component should render correctly 1`] = `
<div>
  <h1>
    name
  </h1>
  <p>
    description
  </p>
  <table
    id="recipeView"
  >
    <thead>
      <tr>
        <th>
          Nome
        </th>
        <th>
          Quantità
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          name
        </td>
        <td>
          0
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
